<resources>
    <string name="app_name">StoryApp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="story_app">Story App</string>
    <string name="title_welcome">Welcome to StoryApp</string>
    <string name="description_welcome">Discover the magic in every story. Explore, share and let the stories inspire you. Start your adventure now and let the world know your story!</string>
    <string name="description_signin">Welcome Back !, Please enter your details.</string>

    <string name="email">Email</string>
    <string name="invalid_email">Email mush be have pattern @email.com</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="please_enter_pw">Please enter your password</string>
    <string name="password_too_short">Password must be at least 8 characters</string>
    <string name="show_pw">Show</string>
    <string name="fill_all_fields">Please fill in all data forms</string>
    <string name="add_button">add Button</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="time_date">time date</string>
    <string name="loading">Loading...</string>
    <string name="camera">Camera</string>
    <string name="galery">Gallery</string>
    <string name="posting">Posting</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="logout">Logout</string>
    <string name="story_image">Story Image</string>

    <string name="select_photo">Please select a photo</string>
    <string name="empty_description">Description cannot be empty</string>
    <string name="failed_to_get_image">Failed to get image URI for camera</string>
    <string name="network_error">No internet connection</string>

    <string name="maps">maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="more_maps">more maps</string>
    <string name="add_location">Add Your Location</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="failed_to_get_location">Failed to get location. Please try again.</string>
    <string name="permission_denied">Location permission denied. Please enable it in settings.</string>
</resources>